Fix alignment of servers in bar

--- a/src/theme.less
+++ b/src/theme.less
@@ -11,6 +11,7 @@
 .scroller-1Bvpku {
 	display: flex;
 	flex-direction: row;
+	overflow: hidden !important;
 	& > div:not(.listItem-GuPuDH) {
 		display: contents;
 	}
@@ -532,7 +533,10 @@
 	}
 
 	.listItem-1hlISG {
-		margin: 0;
+		margin: auto 0;
+	}
+	.listItemWrapper-t7zeg3 {
+		margin: auto 12px;
 	}
 
 	.guildSeparator-EOYZLM {
